# bevy_bitmap_text

./: CHANGELOG.md  Cargo.toml  readme.md  readme_zh-hans.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  refactor-request.md
.github/workflows/: ci.yml  update-deps.yml
examples/: colors.rs  demo.rs  rainbow_shader.rs  typewriter.rs
examples/assets/: FONT_LICENSE.txt
src/: cache.rs  components.rs  font_id.rs  layout.rs  lib.rs  parse.rs  systems.rs
