[package]
name = "bevy_bitmap_text"
version = "0.1.1"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/souprune"
homepage = "https://github.com/Bli-AIk/souprune"
description = "Glyph-as-Entity dynamic atlas text rendering for Bevy"
documentation = "https://docs.rs/bevy_bitmap_text"
readme = "readme.md"
keywords = ["bevy", "text-rendering", "bitmap-font", "glyph", "game-development"]
categories = ["game-development", "rendering::graphics-api"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
] }
fontdue = "0.9"
etagere = "0.3"
log = "0.4"

[dev-dependencies]
bevy = { version = "0.18" }
